
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct see_register_properties {scalar_t__ regno; int last_def; int first_se_before_any_def; int first_se_after_last_def; } ;
struct see_ref_s {int use_se_hash; void* insn; } ;
typedef void* rtx ;
typedef scalar_t__ htab_t ;
typedef int PTR ;


 size_t BLOCK_NUM (void*) ;
 int DF_INSN_LUID (int ,void*) ;
 int INSERT ;
 scalar_t__ REGNO (void*) ;
 int USE_EXTENSION ;
 int df ;
 scalar_t__ dump_file ;
 int eq_descriptor_properties ;
 int fprintf (scalar_t__,char*) ;
 int gcc_assert (int) ;
 int gcc_unreachable () ;
 int hash_del_properties ;
 int hash_descriptor_properties ;
 int htab_clear_slot (int ,int *) ;
 scalar_t__ htab_create (int,int ,int ,int ) ;
 scalar_t__ htab_find_slot (scalar_t__,struct see_register_properties*,int ) ;
 int print_rtl_single (scalar_t__,void*) ;
 scalar_t__* see_bb_hash_ar ;
 void* see_get_extension_reg (void*,int) ;
 int see_seek_pre_extension_expr (void*,int ) ;
 struct see_register_properties* xmalloc (int) ;

__attribute__((used)) static int
see_set_prop_unmerged_use (void **slot, void *b)
{
  rtx use_se = *slot;
  struct see_ref_s *curr_ref_s = (struct see_ref_s *) b;
  rtx insn = curr_ref_s->insn;
  rtx dest_extension_reg = see_get_extension_reg (use_se, 1);
  htab_t curr_bb_hash;
  struct see_register_properties *curr_prop = ((void*)0);
  struct see_register_properties **slot_prop;
  struct see_register_properties temp_prop;
  bool locally_redundant = 0;
  int ref_luid = DF_INSN_LUID (df, insn);

  curr_bb_hash = see_bb_hash_ar[BLOCK_NUM (curr_ref_s->insn)];
  if (!curr_bb_hash)
    {

      curr_bb_hash = htab_create (10,
      hash_descriptor_properties,
      eq_descriptor_properties,
      hash_del_properties);
      see_bb_hash_ar[BLOCK_NUM (curr_ref_s->insn)] = curr_bb_hash;
    }


  temp_prop.regno = REGNO (dest_extension_reg);
  slot_prop =
    (struct see_register_properties **) htab_find_slot (curr_bb_hash,
       &temp_prop, INSERT);

  if (slot_prop && *slot_prop != ((void*)0))
    {

      curr_prop = *slot_prop;
      gcc_assert (curr_prop->regno == REGNO (dest_extension_reg));


      if (curr_prop->last_def < 0 && curr_prop->first_se_before_any_def < 0)
 curr_prop->first_se_before_any_def = ref_luid;
      else if (curr_prop->last_def < 0
        && curr_prop->first_se_before_any_def >= 0)
 {

   htab_clear_slot (curr_ref_s->use_se_hash, (PTR *)slot);
   locally_redundant = 1;
 }
      else if (curr_prop->last_def >= 0
        && curr_prop->first_se_after_last_def < 0)
 curr_prop->first_se_after_last_def = ref_luid;
      else if (curr_prop->last_def >= 0
        && curr_prop->first_se_after_last_def >= 0)
 {

   htab_clear_slot (curr_ref_s->use_se_hash, (PTR *)slot);
   locally_redundant = 1;
 }
      else
 gcc_unreachable ();
    }
  else
    {

      curr_prop = xmalloc (sizeof (struct see_register_properties));
      curr_prop->regno = REGNO (dest_extension_reg);
      curr_prop->last_def = -1;
      curr_prop->first_se_before_any_def = ref_luid;
      curr_prop->first_se_after_last_def = -1;
      *slot_prop = curr_prop;
    }



  if (!locally_redundant)
    see_seek_pre_extension_expr (use_se, USE_EXTENSION);
  if (locally_redundant && dump_file)
    {
      fprintf (dump_file, "Locally redundant extension:\n");
      print_rtl_single (dump_file, use_se);
    }
  return 1;
}
